# t1_nmpc

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: 2026-06-25-t1controller-divergences.md  acados_exact_elimination_pipeline.md
sim/: _sim_util.py  mujoco_runtime.py  pickup.py  stand.py  state.py  walk.py  wb_stand_croco.py  wb_stand_gate.py  wb_state.py  wb_walk_aligator.py  wb_walk_croco.py  wb_walk_gate.py  wb_walk_view.py
spikes/: croco_m1_faithful_spike.py  croco_stand_spike.py  croco_walk_spike.py
t1_nmpc/: __init__.py  config.py  execution.py  model.py  mpc_result.py
t1_nmpc/robot/: config.py  model.py
t1_nmpc/runtime/: control_loop.py  measure_deploy.py  mujoco_transport.py  sdk_transport.py  transport.py
t1_nmpc/wb/: aligator_exec.py  aligator_model.py  aligator_mpc.py  aligator_state.py  aligator_swingz.py  aligator_walk.py  config.py  (+33 more)
tests/: conftest.py  test_aligator_config.py  test_aligator_exec.py  test_aligator_gait_cycle.py  test_aligator_model.py  test_aligator_mpc.py  test_aligator_phase1_gate.py  test_aligator_phase2_gate.py  test_aligator_recede.py  test_aligator_walk.py  test_config.py  test_constraint.py  test_cost.py  test_croco_activations.py  test_croco_costs.py  test_croco_mpc.py  test_croco_problem.py  test_croco_walk_costs.py  test_croco_walk_mpc.py  test_croco_walk_problem.py  test_dynamics.py  test_env.py  test_execution.py  test_gait.py  test_model.py  test_mpc.py  test_mpc_result.py  test_mujoco_runtime.py  test_ocp.py  test_robot_execution.py  test_robot_model.py  test_runtime_loop.py  test_runtime_mujoco_transport.py  test_runtime_sdk_skeleton.py  test_runtime_transport.py  test_sim_util.py  test_spline.py  test_stand_closed_loop.py  test_state.py  test_sysid_friction.py  (+36 more)
tools/: codegen_solver.py
(+22 files in other folders)
