[project]
name = "t1_nmpc"
version = "0.0.1"
description = "wb_humanoid-faithful whole-body nonlinear MPC (NMPC) for Booster T1 (acados + pinocchio.casadi)"
requires-python = ">=3.10,<3.11"
# Env is conda-managed (`t1mpc`): install with `pip install -e . --no-deps`.
# The runtime deps below come from conda-forge (pinocchio, casadi, numpy, scipy,
# mujoco) + pip (acados_template, adam-robotics). Listed for documentation only.
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.11",
    "mujoco>=3.1",
    # pinocchio (+pinocchio.casadi), casadi, acados_template, adam-robotics:
    # provided by the conda env, not pip-resolvable here.
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["t1_nmpc*", "sim*"]
