[project]
name = "t1_nmpc"
version = "0.0.1"
description = "Whole-body NMPC for Booster T1 (CasADi Opti + Fatrop whole_body_rnea + pinocchio.casadi)"
requires-python = ">=3.10"
# Env is conda-managed (`t1mpc`): install with `pip install -e . --no-deps`.
# The runtime deps below come from conda-forge (pinocchio, casadi+Fatrop, numpy, scipy,
# mujoco). Listed for documentation only.
dependencies = [
    "numpy>=2.0,<3",
    "scipy>=1.11",
    "mujoco>=3.1",
    # pinocchio (+pinocchio.casadi), casadi (with Fatrop):
    # provided by the conda env, not pip-resolvable here.
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["t1_nmpc*", "sim*"]
